# proof

./: CMakeLists.txt  doxygenconfig  element.cpp  element.h  main.cpp  my_proof.kdev4  syntax.cpp  syntax.h
binary/: FORMAT
kern/: CMakeLists.txt  abstraction.cpp  abstraction.h  application.cpp  application.h  constant.cpp  constant.h  element.cpp  element.h  element_cast.h  element_ptr.cpp  element_ptr.ext.h  element_ptr.h  printing.cpp  simple_element.h  variable.cpp  variable.h
kern/ext/: dummy.cpp  dummy.h  named_var.h  unknown.cpp  unknown.h
lang/: CMakeLists.txt  Parser.cpp  Parser.h  Parser.ih  additional_elements.h  grammar.y  lex.cpp  lex.h  main.cpp  semantic.h
samples/: CMakeLists.txt  test
